# drf_blog

./: db.sqlite3  pyproject.toml
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
blog_project/: settings.py  urls.py
posts/: models.py  permissions.py  serializers.py  tests.py  views.py
posts/migrations/: 0001_initial.py
