[tool.poetry]
name = "drf-blog"
version = "0.1.0"
description = ""
authors = ["Behrooz Payoon <behrooz.payoon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
djangorestframework = "3.15.0"
django-cors-headers = "^4.3.1"
dj-rest-auth = "^5.0.2"
django-allauth = "^0.61.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
